# alpha

./: .gitignore  CMakeLists.txt  makefile
include/: Array.h  BST.h  Bst.h  HelperFuncs.h  List.h  Macros.h  Queue.h  Stack.h  Tree.h
src/: CMakeLists.txt  HelperFuncs.c
src/Arrays/: Array.c
src/Lists/: List.c
src/Queues/: Queue.c
src/Stacks/: Stack.c
src/Trees/: BST.c  Bst.c  Tree.c  _Tree.c
tests/ArrayTest/: ArrayTest.c  CMakeLists.txt
tests/BstTest/: BstTest.c  CMakeLists.txt
tests/ListTest/: CMakeLists.txt  ListTest.c
tests/QueueTest/: CMakeLists.txt  QueueTest.c
tests/StackTest/: CMakeLists.txt  StackTest.c
tests/TreeTest/: CMakeLists.txt  TreeTest.c
